# onecard

./: .gitignore  readme.md
onecard-server/: README.md  build.gradle.kts  eslint.config.mjs  package.json  pyproject.toml  settings.gradle.kts  tsconfig.json
onecard-server/src/: app.module.ts  app.py  main.ts
onecard-server/src/main/resources/: application.properties
onecard-server/src/main/resources/static/: app.js  index.html
onecard-server/src/modules/game/: game.controller.spec.ts  game.controller.ts  game.module.ts  game.service.spec.ts  game.service.ts  games.controller.spec.ts  games.controller.ts
onecard-server/src/modules/game/constants/: game.constants.ts
onecard-server/src/modules/game/dto/: create-game.dto.ts  game-action.dto.ts  game-settings.dto.ts  reset-game.dto.ts
onecard-server/src/modules/game/inference/: action-mask.spec.ts  action-mask.ts  observation-encoder.spec.ts  (+4 more)
onecard-server/src/onecard_api/: container.py  main.py
onecard-server/src/onecard_api/api/: deps.py  games.py  onnx_policy.py  schemas.py
onecard-server/src/onecard_api/domain/: card_utils.py  constants.py  engine.py  players.py  state.py  transitions.py  types.py
onecard-server/src/onecard_api/inference/: action_mask.py  observation_encoder.py
onecard-server/src/onecard_api/services/: game_ai_service.py  game_engine_service.py  game_service.py  game_state_store.py  onnx_policy_service.py
onecard-server/tests/: conftest.py  test_games.py
onecard-server/tests/api/: test_api_errors.py  test_games.py
onecard-server/tests/inference/: test_inference_logic.py
(+180 files in other folders)
