[tool.poetry]
name = "onecard-api"
version = "0.2.0"
description = "FastAPI server for the Onecard game (ported from NestJS)"
authors = ["dong young <dong5854@gmail.com>"]
readme = "README.md"
packages = [{ include = "onecard_api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = { version = ">=0.125.0,<0.126.0", extras = ["standard"] }
numpy = ">=1.26.0,<3.0.0"
onnxruntime = ">=1.19.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-q"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
